Look-Up Tables y primer intento de modularizar

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ SOURCE_C = $(wildcard *.c)
 OBJECTS_C = $(patsubst %.c, ../bin/%_c.o, $(SOURCE_C))
 
 CFLAGS = -std=gnu99 -O3
-EXECUTABLE = ../bin/ising.e
+EXECUTABLE = ../bin/md.e
 
 default: help
 
