Solucionado leer_tablas, arregle los enchastres que hice en el Makefile, agregue un principio de interfaz en main y generalice Llenar_Pos para cualquier valor de N (de forma un poco sucia)

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,7 @@ OBJECTS_C = $(patsubst %.c, ../bin/%_c.o, $(SOURCE_C))
 
 
 CFLAGS = -std=gnu99 -O3 -Wall
-EXECUTABLE1 = ../bin/md.e
-EXECUTABLE2 = ../bin/table.e
+EXECUTABLE = ../bin/md.e
 
 default: help
 
@@ -20,16 +19,13 @@ Options:\n\n\
   make executable:    compiler makes executable\n\
   make all:           build all previous\n\
   make clean:         delete output files\n\
-  make help:          display this help
-	make table:					compiler makes executable for table.e"
+  make help:          display this help"
 
 objects: $(OBJECTS_C)
 
-executable: $(EXECUTABLE1)
+executable: $(EXECUTABLE)
 
-table: $(EXECUTABLE2)
-
-all: objects executable table
+all: objects executable
 
 ../bin/%_c.o: %.c
 	$(CC) $(CFLAGS) -c $^ -o ../bin/$@ -lm
@@ -38,4 +34,4 @@ all: objects executable table
 	$(LD) $^ -o $@ -lm
 
 clean:
-	rm -rfv $(OBJECTS_C) $(EXECUTABLE1) $(EXECUTABLE1)
+	rm -rfv $(OBJECTS_C) $(EXECUTABLE1)
